--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ex1",
+  "name": "nodejs-jwt-refresh-token",
   "version": "1.0.0",
-  "description": "",
+  "description": "Exempo de refresh token, utilizando microservices",
   "main": "index.js",
   "scripts": {
     "start": "nodemon ./micro-auth.js",
